Trying various encodings for grouping metrics.